--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -22,7 +22,7 @@
 
 @media (max-width: 1169px) {
 .hero {
-	border: 1px solid green;
+	border: 3px solid red;
 }
 	.btn-pathway { font-size: 1.8em; }
 }
