--- a/css/content.css
+++ b/css/content.css
@@ -6548,7 +6548,7 @@ p.caption {
       font-size: 2em; } }
 @media (max-width: 1169px) {
   .hero {
-    border: 1px solid green; }
+    border: 3px solid red; }
 
   .btn-pathway {
     font-size: 1.8em; } }
