--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -114,7 +114,7 @@ a.signale {
 
 /* Media */
 /*------------------------------*/
-.media { //background: url("../images/hr-vert.png") no-repeat right top; }
+/*.media { background: url("../images/hr-vert.png") no-repeat right top; }*/
 .video-player { margin-bottom: 30px; }
 
 /* Warburg Institute */
