--- a/css/content.css
+++ b/css/content.css
@@ -6533,6 +6533,11 @@ p.caption {
   h2 {
     font-size: 2em; } }
 @media (min-width: 1372px) {
+  .hero {
+    border: 1px solid orange; }
+    .hero .home-content p {
+      font-size: 1.8em; } }
+@media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 15%; }
     .hero .home-content p {
