--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -1,3 +1,17 @@
+
+@media (min-width: 1372px) {
+	.hero {
+	border: 1px solid orange;
+		.home-content { 
+
+			p {
+				font-size: 1.8em;
+			}
+		}
+	}
+}
+
+
 @media (min-width: 1372px) {
 	.hero {
 		.home-content { 
