--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -1,7 +1,7 @@
 
-@media (min-width: 1372px) {
+@media (max-width: 1592px) {
 	.hero {
-	border: 1px solid orange;
+	
 		.home-content { 
 
 			p {
@@ -14,6 +14,7 @@
 
 @media (min-width: 1372px) {
 	.hero {
+	border: 1px solid blue;
 		.home-content { 
 			padding-left: 15%; 
 
