--- a/css/content.css
+++ b/css/content.css
@@ -6532,16 +6532,16 @@ p.caption {
 
   h2 {
     font-size: 2em; } }
+@media (max-width: 1592px) {
+  .hero .home-content p {
+    font-size: 1.8em; } }
 @media (min-width: 1372px) {
   .hero {
-    border: 1px solid orange; }
-    .hero .home-content p {
-      font-size: 1.8em; } }
-@media (min-width: 1372px) {
-  .hero .home-content {
-    padding-left: 15%; }
-    .hero .home-content p {
-      font-size: 2em; } }
+    border: 1px solid blue; }
+    .hero .home-content {
+      padding-left: 15%; }
+      .hero .home-content p {
+        font-size: 2em; } }
 @media (max-width: 1292px) {
   .hero {
     border: 1px solid orange; }
