--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -1,7 +1,7 @@
 
 @media (max-width: 1372px) {
 	.hero {
-	border: 1px solid blue;
+	
 		.home-content { 
 			padding-left: 7%; 
 
@@ -14,7 +14,7 @@
 
 @media (max-width: 1292px) {
 	.hero {
-			border: 1px solid orange;
+			
 		.home-content { 
 			h2 { font-size: 2em; }
 
@@ -44,7 +44,7 @@
 		.home-content { 
 			p { 
 				font-size: 1.2em;
-				width: 550px; }
+			 }
 		}
 	}
 	.btn-pathway { font-size: 1.6em; }
