--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -73,7 +73,7 @@
 				padding: 20px;
 				margin: 0; }
 			p {
-				width: 420px;
+				//width: 420px;
 				// font-size: 1.3em;
 				padding: 20px;
 				margin: 0; }
@@ -105,7 +105,7 @@
 				padding: 10px;
 				margin: 0; }
 			p {
-				width: 350px;
+				//width: 350px;
 			}
 		}
 	}
