--- a/css/content.css
+++ b/css/content.css
@@ -6576,6 +6576,7 @@ p.caption {
       padding: 20px;
       margin: 0; }
     .hero .home-content p {
+      font-size: 1.5em;
       padding: 20px;
       margin: 0; }
     .hero .home-content ul {
