--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -74,7 +74,7 @@
 				margin: 0; }
 			p {
 				//width: 420px;
-				// font-size: 1.3em;
+				font-size: 1.5em;
 				padding: 20px;
 				margin: 0; }
 			ul {
