--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -100,7 +100,7 @@
 	.hero {
 		.home-content {
 			h2 {
-				width: 320px;
+				width: 70%;
 				// font-size: 2.6em;
 				padding: 10px;
 				margin: 0; }
