--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -4,7 +4,8 @@
 		.home-content { 
 			margin: 0 auto;
 			width: 996px;
-			border: 1px solid red;
+			float: none;
+			padding-left: 0;
 
 			p {
 				width: 996px;
