Styling image group display
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1186 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5572,7 +5572,10 @@ body {
 
 .guide a {
   color: white;
-  background: #7a9945; }
+  background: #7a9945;
+  display: inline-block;
+  margin: 5px;
+  padding: 4px; }
 .guide a:hover {
   background: #37c1d6;
   text-decoration: none; }
