--- a/css/panels.css
+++ b/css/panels.css
@@ -5628,7 +5628,10 @@ body {
       -webkit-border-radius: 0;
       -moz-border-radius: 0;
       border-radius: 0;
-      margin: 0; }
+      margin: 0;
+      display: inline-block;
+      margin-top: 5px;
+      margin-bottom: 5px; }
     .panels-display .panel-description .additional-images .addl-img-modal a.close {
       cursor: pointer;
       margin: 0; }
