--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -938,7 +938,7 @@ body {
 		display: inline-block;
     	margin: 5px;
     	padding: 4px;
-    	
+
     }
 
 	a:hover { 
@@ -999,7 +999,10 @@ body {
 					-webkit-border-radius: 0;
 					-moz-border-radius: 0;
 					border-radius: 0;
-					margin: 0; }
+					margin: 0; 
+					display: inline-block;
+					margin-top: 5px;
+					margin-bottom: 5px}
 				a.close { 
 					cursor: pointer;
 					margin: 0; }
