Styling image group display
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1188 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -1000,15 +1000,17 @@ body {
 					-moz-border-radius: 0;
 					border-radius: 0;
 					margin: 0; 
-					display: inline-block;
-					margin-top: 5px;
-					margin-bottom: 5px}
 				a.close { 
 					cursor: pointer;
 					margin: 0; }
 			}
 		}
 	}
+}
+
+.panels-display .panel-description p a {
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 /*
