format for contributors page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1192 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6367,7 +6367,9 @@ p.caption {
 /* Contributors page */
 /*------------------------------*/
 .contributor {
-  clear: both; }
+  clear: both;
+  margin-bottom: 2em;
+  overflow: hidden; }
 
 .contributor-photo {
   width: 20%;
