--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -101,6 +101,8 @@ p.caption {
 
 .contributor { 
   clear: both;
+  margin-bottom: 2em;
+  overflow: hidden;
 }
 .contributor-photo { 
   width: 20%;
